frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: monsterultrafiesta/frontend:latest  # Imagen de Docker Hub
        ports:
        - containerPort: 80  # El frontend expone el puerto 80 para HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80  # El puerto 80 es el estándar para HTTP
      targetPort: 80  # Redirige al puerto 80 del contenedor frontend
  type: ClusterIP  # Solo accesible dentro del clúster
